# agentcat-python-sdk

./: CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  pyproject.toml
.github/workflows/: mcp-compatibility.yml  mcp-prerelease-compatibility.yml
docs/superpowers/plans/: 2026-07-03-agentcat-rebrand.md
docs/superpowers/specs/: 2026-07-03-agentcat-rebrand-design.md
src/agentcat/: __init__.py  types.py
src/agentcat/modules/: __init__.py  constants.py  diagnostics.py  event_queue.py  exceptions.py  identify.py  internal.py  logging.py  redaction.py  request_extra.py  sanitization.py  session.py  telemetry.py  tools.py  truncation.py  validation.py
src/agentcat/modules/exporters/: __init__.py  datadog.py  otlp.py  posthog.py  sentry.py
src/agentcat/modules/overrides/: mcp_server.py
src/agentcat/modules/overrides/community/: monkey_patch.py  tool_manager.py
src/agentcat/modules/overrides/community_v3/: __init__.py  integration.py  middleware.py
src/agentcat/modules/overrides/official/: monkey_patch.py
src/mcpcat/: __init__.py  types.py  utils.py
src/mcpcat/modules/: compatibility.py  constants.py  diagnostics.py  event_queue.py  exceptions.py  identify.py  internal.py  logging.py  redaction.py  sanitization.py  session.py  tools.py  truncation.py
src/mcpcat/modules/exporters/: datadog.py  otlp.py  sentry.py
src/mcpcat/modules/overrides/: mcp_server.py
src/mcpcat/modules/overrides/community/: monkey_patch.py  tool_manager.py
src/mcpcat/modules/overrides/community_v3/: __init__.py  integration.py  middleware.py
src/mcpcat/modules/overrides/official/: monkey_patch.py
tests/: __init__.py  test_api_base_url.py  test_context_parameters.py  test_deprecation_notice.py  test_diagnostics_attributes.py  test_diagnostics_auth.py  test_diagnostics_export.py  test_diagnostics_integration.py  test_diagnostics_no_payload.py  test_diagnostics_optout.py  test_diagnostics_record.py  test_diagnostics_sink.py  test_diagnostics_test_env.py  test_dynamic_tracking.py  test_event_capture_completeness.py  test_event_queue.py  test_event_tags_properties.py  test_exceptions.py  test_exporter_sdk_version.py  test_failure_injection.py  test_identify.py  test_logging.py  test_lowlevel_error_capture.py  test_mcp_version_compatibility.py  test_multiple_servers.py  test_posthog_exporter.py  test_publish_custom_event.py  test_redaction.py  test_report_missing.py  test_request_extra.py  test_sanitization.py  test_session.py  test_stateless.py  test_tag_validation.py  test_tool_context.py  test_truncation.py  test_truncation_json_safe.py
tests/community/: test_community_dynamic_tracking.py  test_community_event_capture.py  test_community_fastmcp.py  test_community_report_missing.py  test_community_tool_context.py  test_community_tracking_timing.py  test_community_v3_event_serialization.py  test_community_v3_inject_context.py  test_community_v3_openapi.py  test_community_v3_runtime_state_tools.py
tests/e2e/: conftest.py
tests/e2e/community_v2/: conftest.py  test_identify_http.py
tests/e2e/community_v3/: conftest.py  test_identify_http.py  test_stateless_http.py
tests/e2e/official/: conftest.py  test_identify_http.py  test_redact_event_http.py  test_redaction_http.py  test_session_http.py  test_stateless_http.py
tests/test_utils/: __init__.py  client.py  community_openapi_server.py
