[project]
name = "agentcat"
version = "1.0.3"
description = "Analytics tool for MCP (Model Context Protocol) servers and AI agents - tracks tool usage patterns and provides insights"
authors = [
    { name = "AgentCat, Inc.", email = "support@agentcat.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.2.0",
    "agentcat-api==1.0.0",
    "pydantic>=2.0.0,<2.12",
    "requests>=2.31.0",
]

[project.urls]
"Homepage" = "https://github.com/agentcathq/agentcat-python-sdk"
"Bug Tracker" = "https://github.com/agentcathq/agentcat-python-sdk/issues"
"Repository" = "https://github.com/agentcathq/agentcat-python-sdk"

[project.optional-dependencies]
community = [
    "fastmcp>=2.7.0,!=2.9.*",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "freezegun>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentcat"]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/agentcat",
    "tests",
    "README.md",
    "LICENSE",
    "CONTRIBUTING.md",
    "pyproject.toml",
    "docs/static",
    "docs/cats",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "e2e: real HTTP transport tests (uvicorn-in-thread; ~25s overhead)",
]
filterwarnings = [
    # Upstream-only DeprecationWarnings from uvicorn's websocket adapter and
    # the `websockets` package's legacy submodule. They fire whenever uvicorn
    # boots (every e2e test) and cannot be silenced from our code; they will
    # disappear once uvicorn migrates off websockets.legacy. Each filter is
    # scoped by emitting module so the same message from any other source
    # would still surface. Format: action:message:category:module:lineno
    "ignore:websockets\\.legacy is deprecated:DeprecationWarning:websockets.legacy",
    "ignore:websockets\\.server\\.WebSocketServerProtocol is deprecated:DeprecationWarning:uvicorn.protocols.websockets.websockets_impl",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
namespace_packages = true
exclude = ["venv", "build", "dist"]

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.isort]
known-first-party = ["agentcat"]

[dependency-groups]
dev = [
    "freezegun>=1.5.2",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
]
